kubernetes/gitea/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: gitea
  labels:
    name: gitea
