kubernetes/gitea/cloudflare.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflared-gitea
  namespace: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudflared-gitea
  template:
    metadata:
      labels:
        app: cloudflared-gitea
    spec:
      containers:
        - name: cloudflared
          image: cloudflare/cloudflared:latest@sha256:e39ee8da81ad5e05d77f38d2f51c60ca51bf2a8450ac3abab50c17fdb91d91bf
          imagePullPolicy: Always
          args:
            - tunnel
            - run
