kubernetes/gitea/gitea-cloudflare.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflared-gitea
  namespace: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudflared-gitea
  template:
    metadata:
      labels:
        app: cloudflared-gitea
    spec:
      containers:
        - name: cloudflared
          image: cloudflare/cloudflared:latest
          imagePullPolicy: Always
          args:
            - tunnel
            - run
