kubernetes/gitea/runner.yml
# apiVersion: v1
# kind: Secret
# metadata:
#   name: gitea-runner-secret
#   namespace: gitea
# type: Opaque
# stringData:
#   RUNNER_TOKEN: "<REPLACE_WITH_GITEA_RUNNER_TOKEN>"


# kubectl create secret generic gitea-runner-secret \
#   --namespace gitea \
#   --from-literal=RUNNER_TOKEN=<REPLACE_WITH_GITEA_RUNNER_TOKEN>
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea-actions-runner
  namespace: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea-actions-runner
  template:
    metadata:
      labels:
        app: gitea-actions-runner
    spec:
      containers:
        - name: runner
          image: gitea/act_runner:latest@sha256:b5c35d6bdbb9bb25e531230bfc7cc663cb751406cbec90a2a891b85fea54de86
          volumeMounts:
            - name: docker-sock
              mountPath: /var/run/docker.sock
            - name: runner-data
              mountPath: /data
      volumes:
        - name: docker-sock
          hostPath:
            path: /var/run/docker.sock
        - name: runner-data
          emptyDir: {}
