kubernetes/gitea/db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: gitea
  name: gitea-db
spec:
  revisionHistoryLimit: 3
  replicas: 1
  selector:
    matchLabels:
      app: gitea-db
  template:
    metadata:
      labels:
        app: gitea-db
    spec:
      containers:
        - name: postgres
          image: postgres:17@sha256:a426e44bac0b759c95894d68e1a0ac03ecc20b619f498a91aae373bf06d8508d
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-data
      volumes:
        - name: postgres-data
          hostPath:
            path: /data/gitea/postgres
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: gitea-db-svc
  namespace: gitea
  labels:
    app: gitea-db
spec:
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    app: gitea-db
  type: ClusterIP
