kubernetes/gitea/web.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea-web
  namespace: gitea
spec:
  revisionHistoryLimit: 3
  replicas: 1
  selector:
    matchLabels:
      app: gitea-web
  template:
    metadata:
      labels:
        app: gitea-web
    spec:
      containers:
        - name: gitea
          image: docker.io/gitea/gitea:1.27@sha256:7dff60d7ea6df9d0bdf78971cdb1350e9b7df3fda5f115c77afe12122887bd64
          ports:
            - containerPort: 3000
            - containerPort: 22
          volumeMounts:
            - name: gitea-data
              mountPath: /data
            - name: timezone
              mountPath: /etc/timezone
              readOnly: true
            - name: localtime
              mountPath: /etc/localtime
              readOnly: true
            - name: landing-page
              mountPath: /data/gitea/templates/home.tmpl
              subPath: home.tmpl
              readOnly: true
            - name: landing-page
              mountPath: /data/gitea/public/assets/css/custom-landing.css
              subPath: custom-landing.css
              readOnly: true
            - name: landing-page
              mountPath: /data/gitea/public/assets/js/custom-landing.js
              subPath: custom-landing.js
              readOnly: true
      volumes:
        - name: gitea-data
          hostPath:
            path: /data/gitea/data
            type: DirectoryOrCreate
        - name: timezone
          hostPath:
            path: /etc/timezone
        - name: localtime
          hostPath:
            path: /etc/localtime
        - name: landing-page
          configMap:
            name: gitea-landing-page

---
apiVersion: v1
kind: Service
metadata:
  name: gitea-web-svc
  namespace: gitea
  annotations:
    tailscale.com/expose: "true" # exposes IP directly
spec:
  type: NodePort
  ports:
    - name: http
      port: 3000
      targetPort: 3000
    - name: ssh
      port: 22
      targetPort: 22
  selector:
    app: gitea-web
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea
  namespace: gitea
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - git.alexmickelson.guru
      secretName: git-tls-cert2
  rules:
    - host: git.alexmickelson.guru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitea-web-svc
                port:
                  number: 3000
